--- a/Actions/PullRequestStatusCheck/action.yaml
+++ b/Actions/PullRequestStatusCheck/action.yaml
@@ -5,18 +5,26 @@ inputs:
     description: Shell in which you want to run the action (powershell or pwsh)
     required: false
     default: powershell
-
+  repository:
+    description: Repository name
+    required: false
+    default: ${{ github.repository }}
+  runId:
+    description: Run Id
+    required: false
+    default: ${{ github.run_id }}
 runs:
   using: composite
   steps:
     - name: run
       shell: ${{ inputs.shell }}
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        _repository: ${{ inputs.repository }}
+        _runId: ${{ inputs.runId }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/PullRequestStatusCheck.ps1 -Repository $Env:GITHUB_REPOSITORY -RunId $Env:GITHUB_RUN_ID
+          ${{ github.action_path }}/PullRequestStatusCheck.ps1 -Repository $Env:_repository -RunId $Env:_runId
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
