--- a/Actions/ReadSettings/action.yaml
+++ b/Actions/ReadSettings/action.yaml
@@ -44,15 +44,6 @@ outputs:
   GitHubRunnerShell:
     description: Shell for GitHubRunner jobs
     value: ${{ steps.readsettings.outputs.GitHubRunnerShell }}
-  EnvironmentsJson:
-    description: Environments in compressed Json format
-    value: ${{ steps.readsettings.outputs.EnvironmentsJson }}
-  EnvironmentCount:
-    description: Number of environments in array
-    value: ${{ steps.readsettings.outputs.EnvironmentCount }}
-  UnknownEnvironment:
-    description: Determines whether we are publishing to an unknown environment
-    value: ${{ steps.readsettings.outputs.UnknownEnvironment }}
 runs:
   using: composite
   steps:
@@ -64,14 +55,13 @@ runs:
         _token: ${{ inputs.token }}
         _parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
         _project: ${{ inputs.project }}
-        _getenvironments: ${{ inputs.getenvironments }}
         _includeProduction: ${{ inputs.includeProduction }}
         _release: ${{ inputs.release }}
         _get: ${{ inputs.get }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/ReadSettings.ps1 -actor $ENV:_actor -token $ENV:_token -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -project $ENV:_project -getenvironments $ENV:_getenvironments -includeProduction ($ENV:_includeProduction -eq 'Y') -release ($ENV:_release -eq 'Y') -get $ENV:_get
+          ${{ github.action_path }}/ReadSettings.ps1 -actor $ENV:_actor -token $ENV:_token -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -project $ENV:_project -includeProduction ($ENV:_includeProduction -eq 'Y') -release ($ENV:_release -eq 'Y') -get $ENV:_get
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
