--- a/Actions/Deploy/action.yaml
+++ b/Actions/Deploy/action.yaml
@@ -42,7 +42,7 @@ runs:
         _environmentName: ${{ inputs.environmentName }}
         _artifacts: ${{ inputs.artifacts }}
         _type: ${{ inputs.type }}
-        _deploymentEnvironmentsJson: ${{ $inputs.deploymentEnvironmentsJson }}
+        _deploymentEnvironmentsJson: ${{ inputs.deploymentEnvironmentsJson }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
