--- a/Templates/AppSource App/.github/workflows/PublishToEnvironment.yaml
+++ b/Templates/AppSource App/.github/workflows/PublishToEnvironment.yaml
@@ -60,7 +60,7 @@ jobs:
 
       - name: EnvName
         id: envName
-        if: steps.DetermineDeploymentEnvironments.outputs.UnknownEnvironment == 1
+        if: steps.DetermineDeploymentEnvironments.outputs.EnvironmentCount == 1
         run: |
           $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
           $envName = '${{ fromJson(steps.DetermineDeploymentEnvironments.outputs.environmentsMatrixJson).matrix.include[0].environment }}'.split(' ')[0]
@@ -68,7 +68,7 @@ jobs:
 
       - name: Read secrets
         uses: microsoft/AL-Go-Actions/ReadSecrets@main
-        if: steps.DetermineDeploymentEnvironments.outputs.UnknownEnvironment == 1
+        if: steps.DetermineDeploymentEnvironments.outputs.EnvironmentCount == 1
         with:
           shell: powershell
           parentTelemetryScopeJson: ${{ steps.init.outputs.telemetryScopeJson }}
@@ -77,7 +77,7 @@ jobs:
 
       - name: Authenticate
         id: Authenticate
-        if: steps.DetermineDeploymentEnvironments.outputs.UnknownEnvironment == 1
+        if: steps.DetermineDeploymentEnvironments.outputs.EnvironmentCount == 1
         run: |
           $envName = '${{ steps.envName.outputs.envName }}'
           $secretName = ''
