Add obsoleted setting

--- a/Actions/ReadSettings/ObsoletedSettings.json
+++ b/Actions/ReadSettings/ObsoletedSettings.json
@@ -6,5 +6,9 @@
     "*_Projects": { 
         "type": "Error",
         "message": "The setting should be replaced by using the Projects property in the DeployTo* setting in .github/AL-Go-Settings.json instead."
+    },
+    "insiderSasTokenSecretName": {
+        "type": "Warning",
+        "message": "The setting should be removed, as it is not needed anymore."
     }
 }
