Deployment and Delivery enhancements (#669)
This PR fixes these issues:
- issue #227
- issue #519
- issue #520
- issue #592
- issue #557

Refactor Deliver and Deploy by adding 2 new actions:
- DetermineDeliveryTargets
- DetermineDeploymentEnvironments

and use these in CI/CD, PublishToEnvironment and PublishToAppSource
workflows, removing a lot of PowerShell code jobs in these workflows.

Furthermore, the following new functionality is added to Deployment:
- ContinuousDeployment property in DeployTo
- ForceSync property in DeployTo
- Custom Deployment (`DeployTo<environmentType>.ps1`)
- Support branch policy = Protected branches (bug)

Breaking changes:
- Earlier, EnvironmentName and Projects could be added as environment
secrets, this is no longer supported. Since 3.0, using these secrets has
caused a warning in the build, now it is no longer supported. Having
these secrets defined has caused problems due to masking of values
including the environmentName and problems transferring variables
between jobs with these values (issue 592)
If you have any of these secrets in your repository, the deployment will
fail with this error:

![image](https://github.com/microsoft/AL-Go/assets/10775043/129bb1ab-6cde-4d38-8a10-206861f3cf4c)
- Furthermore, the old settings for specifying Projects
(environmentName_Projects and environmentName-Projects) is also no
longer supported and you will get an error indicating what you need to
do during initialization:

![image](https://github.com/microsoft/AL-Go/assets/10775043/96378b36-e5dd-412b-ac10-d54270391dc0)

TODO:
- [x] Documentation
- [x] Update PR description
- [x] Add tests for DetermineDeploymentEnvironments
- [x] End 2 End Test run
- [x] Release notes
- [x] Giver error if obsolete secrets exists

---------

Co-authored-by: freddydk <freddydk@users.noreply.github.com>
Co-authored-by: Maria Zhelezova <43066499+mazhelez@users.noreply.github.com>

--- a/Actions/ReadSettings/action.yaml
+++ b/Actions/ReadSettings/action.yaml
@@ -21,18 +21,6 @@ inputs:
     description: Project folder
     required: false
     default: '.'
-  getenvironments:
-    description: Specifies the pattern of the environments you want to retreive (or empty for no environments)
-    required: false
-    default: ''
-  includeProduction:
-    description: Specifies whether you want to include production environments
-    required: false
-    default: 'N'
-  release:
-    description: Indicates whether this is called from a release pipeline
-    required: false
-    default: 'N'
   get:
     description: Specifies which properties to get from the settings file, default is all
     required: false
@@ -44,15 +32,6 @@ outputs:
   GitHubRunnerShell:
     description: Shell for GitHubRunner jobs
     value: ${{ steps.readsettings.outputs.GitHubRunnerShell }}
-  EnvironmentsJson:
-    description: Environments in compressed Json format
-    value: ${{ steps.readsettings.outputs.EnvironmentsJson }}
-  EnvironmentCount:
-    description: Number of environments in array
-    value: ${{ steps.readsettings.outputs.EnvironmentCount }}
-  UnknownEnvironment:
-    description: Determines whether we are publishing to an unknown environment
-    value: ${{ steps.readsettings.outputs.UnknownEnvironment }}
 runs:
   using: composite
   steps:
@@ -64,14 +43,11 @@ runs:
         _token: ${{ inputs.token }}
         _parentTelemetryScopeJson: ${{ inputs.parentTelemetryScopeJson }}
         _project: ${{ inputs.project }}
-        _getenvironments: ${{ inputs.getenvironments }}
-        _includeProduction: ${{ inputs.includeProduction }}
-        _release: ${{ inputs.release }}
         _get: ${{ inputs.get }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/ReadSettings.ps1 -actor $ENV:_actor -token $ENV:_token -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -project $ENV:_project -getenvironments $ENV:_getenvironments -includeProduction ($ENV:_includeProduction -eq 'Y') -release ($ENV:_release -eq 'Y') -get $ENV:_get
+          ${{ github.action_path }}/ReadSettings.ps1 -actor $ENV:_actor -token $ENV:_token -parentTelemetryScopeJson $ENV:_parentTelemetryScopeJson -project $ENV:_project -get $ENV:_get
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
